--- a/public/complete_order.ejs
+++ b/public/complete_order.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/style_for_menu.css">
     <link rel="icon" href="/jpgs/favicon.ico">
 
-    <title>Столы | Cherry Music Bar</title>
+    <title>Завершение заказа | Cherry Music Bar</title>
 </head>
 <style>
     .container {
