--- a/public/edit_subcategory.ejs
+++ b/public/edit_subcategory.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/helpmix.css">
     <link rel="icon" href="/jpgs/favicon.ico">
 
-    <title>Редактор категорий | Cherry Music Bar</title>
+    <title>Редактор подкатегорий | Cherry Music Bar</title>
 </head>
 <style>
     .container {
