--- a/public/stoplist_edit.ejs
+++ b/public/stoplist_edit.ejs
@@ -101,7 +101,7 @@ body {
                         </div>   
                     </div>
                     <div hidden>
-                        <input type="number" value="<%= locals.stoplist_item ? stoplist_item.id : ''%>" name="dish_id">  
+                        <input type="number" value="<%= locals.stoplist_item ? stoplist_item.id : ''%>" name="stoplist_id">  
                     </div>
                     <hr>
                     <div class="control-group">
