--- a/public/admin_home.ejs
+++ b/public/admin_home.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/style_for_menu.css">
     <link rel="icon" href="/jpgs/favicon.ico">
 
-    <title>Меню | Cherry Music Bar</title>
+    <title>Меню | <%= locals.org_name %></title>
 </head>
 <body id="">
 
