--- a/public/profile.ejs
+++ b/public/profile.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="icon" href="/jpgs/favicon.ico">
 
-    <title>Cherry Music Bar</title>
+    <title><%= locals.org_name %></title>
 </head>
 
 <body onload="showPopup()">
