--- a/public/stats.ejs
+++ b/public/stats.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/helpmix.css">
     <link rel="icon" href="/jpgs/favicon.ico">
 
-    <title>Аналитика продаж | Cherry Music Bar</title>
+    <title>Аналитика продаж | <%= locals.org_name %></title>
 </head>
 <style>
     .well {
