--- a/public/subcategories.ejs
+++ b/public/subcategories.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style_for_menu.css">
     <link rel="icon" href="jpgs/favicon.ico">
 
-    <title>Японская кухня | Cherry Music Bar</title>
+    <title>Японская кухня | <%= locals.org_name %></title>
 </head>
 
 <body>
