--- a/public/categories_manager.ejs
+++ b/public/categories_manager.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/helpmix.css">
     <link rel="icon" href="/jpgs/favicon.ico">
 
-    <title>Производства | Cherry Music Bar</title>
+    <title>Производства | <%= locals.org_name %></title>
 </head>
 <style>
     .container {
