--- a/public/footer.ejs
+++ b/public/footer.ejs
@@ -1,3 +1,3 @@
 <footer class="bg-light text-center p-3">
-    <p>© 2024 Cherry Music Bar. Все права защищены.</p>
+    <p>© 2024 <%= locals.org_name %>. Все права защищены.</p>
 </footer>
