--- a/public/stoplist_edit.ejs
+++ b/public/stoplist_edit.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/helpmix.css">
     <link rel="icon" href="/jpgs/favicon.ico">
 
-    <title>Редактор стоп-листа | Cherry Music Bar</title>
+    <title>Редактор стоп-листа | <%= locals.org_name %></title>
 </head>
 <style>
     .container {
