--- a/public/tables.ejs
+++ b/public/tables.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/helpmix.css">
     <link rel="icon" href="/jpgs/favicon.ico">
 
-    <title>Столы | Cherry Music Bar</title>
+    <title>Столы | <%= locals.org_name %></title>
 </head>
 <style>
     .container {
