client-server starts

--- a/public/categories_manager.ejs
+++ b/public/categories_manager.ejs
@@ -89,6 +89,10 @@ body {
         }
     </script>
     <%- include('upmenu_crm') %>
+    <% if(locals.has_license == false ) {%>
+        <%- include('license_popup') %>
+    <% } %>
+
     <div class="container">
         <div id="error_div"></div>
         <div class="page-header">
