--- a/public/edit_subcategory.ejs
+++ b/public/edit_subcategory.ejs
@@ -89,6 +89,10 @@ body {
         }
     </script>
     <%- include('upmenu_crm') %>
+    <% if(locals.has_license == false ) {%>
+        <%- include('license_popup') %>
+    <% } %>
+
     <div class="container">
         <h2 class="fw-bold fs-2">Редактор подкатегорий</h2>
         <form action="/admin/nomenclature/subcategory_handler" method="POST">
