--- a/public/sale_edit.ejs
+++ b/public/sale_edit.ejs
@@ -81,6 +81,10 @@ body {
 <body>
     
     <%- include('upmenu_crm') %>
+    <% if(locals.has_license == false ) {%>
+        <%- include('license_popup') %>
+    <% } %>
+
     <div class="container">
         <div id="error_div"></div>
         <div class="page-header">
