--- a/public/stoplist_manager.ejs
+++ b/public/stoplist_manager.ejs
@@ -80,6 +80,10 @@ body {
 </style>
 <body id="">
     <%- include('upmenu_crm') %>
+    <% if(locals.has_license == false ) {%>
+        <%- include('license_popup') %>
+    <% } %>
+
     <div class="container">
         <div id="error_div"></div>
         <div class="page-header">
