--- a/public/upmenu_crm.ejs
+++ b/public/upmenu_crm.ejs
@@ -91,6 +91,7 @@
                             
                                     <li><a tabindex="-1" class="dropdown-item" href="/admin/stats" title="Аналитика продаж">Аналитика продаж</a></li>
                             
+                                    <li><a tabindex="-1" class="dropdown-item" href="/admin/cash_manager" title="Движение денег">Движение денег</a></li>
                                     <!-- <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=uchet&amp;act=ostatki" title="Текущий  баланс">Текущий  баланс</a></li> -->
                                 </ul>
                             </li>
